# PLSSVM

./: CMakeLists.txt
include/plssvm/: backend_types.hpp  csvm_factory.hpp
include/plssvm/backends/HPX/: csvm.hpp  exceptions.hpp  q_kernel.hpp  svm_kernel.hpp
include/plssvm/backends/HPX/detail/: utility.hpp
include/plssvm/backends/HPX/kernel/: kernel_functions.hpp  predict_kernel.hpp
include/plssvm/backends/HPX/kernel/cg_explicit/: blas.hpp  kernel_matrix_assembly.hpp
include/plssvm/backends/HPX/kernel/cg_implicit/: kernel_matrix_assembly_blas.hpp
include/plssvm/backends/OpenMP/kernel/cg_explicit/: blas.hpp
src/: main_predict.cpp  main_train.cpp
src/plssvm/: backend_types.cpp
src/plssvm/backends/HPX/: CMakeLists.txt  csvm.cpp  exceptions.cpp  q_kernel.cpp  svm_kernel.cpp
src/plssvm/backends/HPX/detail/: utility.cpp
